--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   background: #A770EF;
   background: -webkit-linear-gradient(to right, #FDB99B, #CF8BF3, #A770EF);
   background: linear-gradient(to right, #FDB99B, #CF8BF3, #A770EF);
+  min-height: 100vh;
 }
 
 @keyframes animated-gradient{
